fix(page-header) add z-index so its further back

--- a/components/page-header/page-header.less
+++ b/components/page-header/page-header.less
@@ -13,6 +13,7 @@
 	background-position: center;
 	background-size: cover;
 	text-align: center;
+	z-index: -1;
 
 	&.show-gradient::after {
 		content: '';
